--- a/examples/2048/benchmark_2048.ipynb
+++ b/examples/2048/benchmark_2048.ipynb
@@ -2,156 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|    |   Model | Split   |   Iteration |   reward |\n",
+      "|---:|--------:|:--------|------------:|---------:|\n",
+      "|  0 |     007 | train   |        0001 |  2.00028 |\n",
+      "|  1 |     007 | train   |        0002 |  2.00028 |\n",
+      "|  2 |     007 | train   |        0006 |  2.00028 |\n"
+     ]
+    }
+   ],
    "source": [
-    "from dotenv import load_dotenv\n",
-    "import random\n",
-    "from openpipe.client import OpenPipe\n",
+    "from art.utils.benchmarking.generate_comparison_table import generate_comparison_table\n",
+    "from art.utils.benchmarking.types import BenchmarkedModelKey\n",
     "\n",
-    "load_dotenv()\n",
+    "table_str = generate_comparison_table(\n",
+    "    project=\"2048-multi-turn\",\n",
+    "    benchmark_keys=[\n",
+    "        BenchmarkedModelKey(\"007\", \"train\", 1),\n",
+    "        BenchmarkedModelKey(\"007\", \"train\", 2),\n",
+    "        BenchmarkedModelKey(\"007\", \"train\"),\n",
+    "    ],\n",
+    "    metrics=[\"reward\"]\n",
+    ")\n",
     "\n",
-    "op_client = OpenPipe()\n",
-    "print(\"OpenPipe client initialized\")\n",
-    "\n",
-    "random.seed(42)"
+    "print(table_str.to_markdown())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import art\n",
-    "from art.utils.get_trajectory_messages import get_trajectory_messages\n",
-    "import openai\n",
-    "import time\n",
-    "import math\n",
-    "import requests\n",
-    "from litellm import acompletion\n",
-    "\n",
-    "from .utils import generate_game, render_board, apply_agent_move, max_cell_value, check_game_finished\n",
-    "\n",
-    "\n",
-    "WINNING_VALUE = 512\n",
-    "\n",
-    "@art.retry(exceptions=(openai.LengthFinishReasonError, requests.ReadTimeout))\n",
-    "async def rollout(\n",
-    "    model: str, iteration: int, is_validation: bool\n",
-    ") -> art.Trajectory:\n",
-    "\n",
-    "    game = generate_game()\n",
-    "\n",
-    "    move_number = 0\n",
-    "\n",
-    "    trajectory = art.Trajectory(\n",
-    "        messages_and_choices=[\n",
-    "            {\n",
-    "                \"role\": \"system\",\n",
-    "                \"content\": \"You are an excellent 2048 player. Always choose the move most likely to lead to combine cells to eventually reach the number 2048. Optional moves are 'left', 'right', 'up', 'down'. Return your move as an XML object with a single property 'move', like so: <move>left</move>\",\n",
-    "            }\n",
-    "        ],\n",
-    "        reward=0,\n",
-    "        metrics={\"test\": 5},\n",
-    "    )\n",
-    "\n",
-    "    while True:\n",
-    "                    \n",
-    "        trajectory.messages_and_choices.append(\n",
-    "            {\"role\": \"user\", \"content\": render_board(game)}\n",
-    "        )\n",
-    "\n",
-    "        requested_at = int(time.time() * 1000)\n",
-    "        messages = get_trajectory_messages(trajectory)\n",
-    "\n",
-    "        async def get_completion():\n",
-    "            return await acompletion(\n",
-    "                model=model,\n",
-    "                messages=messages,\n",
-    "            )\n",
-    "\n",
-    "        try:\n",
-    "            chat_completion = await get_completion()\n",
-    "            last_completion = chat_completion\n",
-    "        except openai.LengthFinishReasonError as e:\n",
-    "            raise e\n",
-    "        except Exception as e:\n",
-    "            print(\"caught exception generating chat completion\")\n",
-    "            print(e)\n",
-    "            global failing_trajectory\n",
-    "            failing_trajectory = trajectory\n",
-    "            raise e\n",
-    "        \n",
-    "        try:\n",
-    "            op_client.report(\n",
-    "                requested_at=requested_at,\n",
-    "                received_at=int(time.time() * 1000),\n",
-    "                req_payload={\n",
-    "                    \"model\": model,\n",
-    "                    \"messages\": messages,\n",
-    "                    \"metadata\": {\n",
-    "                        \"game_id\": game[\"id\"],\n",
-    "                        \"notebook-id\": \"2048\",\n",
-    "                        \"iteration\": str(iteration),\n",
-    "                        \"validation\": str(is_validation),\n",
-    "                        \"move_number\": str(move_number),\n",
-    "                    },\n",
-    "                },\n",
-    "                resp_payload=chat_completion,\n",
-    "                status_code=200,\n",
-    "            )\n",
-    "        except Exception as e:\n",
-    "            print(f\"Error reporting to OpenPipe: {e}\")\n",
-    "\n",
-    "        choice = chat_completion.choices[0]\n",
-    "        content = choice.message.content\n",
-    "        assert isinstance(content, str)\n",
-    "        trajectory.messages_and_choices.append(choice)\n",
-    "\n",
-    "        try:\n",
-    "            apply_agent_move(game, content)\n",
-    "            move_number += 1\n",
-    "        except ValueError:\n",
-    "            trajectory.reward = -1\n",
-    "            break\n",
-    "\n",
-    "        if check_game_finished(game):\n",
-    "            max_value = max_cell_value(game)\n",
-    "\n",
-    "            if max_value < WINNING_VALUE:\n",
-    "                # scale reward logarithmically between 0 for 2 and 1 for 2048\n",
-    "                trajectory.reward = (math.log(max_value, 2) - 1) / (math.log(WINNING_VALUE, 2) - 1)\n",
-    "            else:\n",
-    "                # double reward if it wins\n",
-    "                trajectory.reward = 2\n",
-    "            break\n",
-    "\n",
-    "    try:\n",
-    "        op_client.update_log_metadata(\n",
-    "            filters=[\n",
-    "                {\n",
-    "                    \"field\": \"completionId\",\n",
-    "                    \"equals\": last_completion.id,\n",
-    "                }\n",
-    "            ],\n",
-    "            metadata={\n",
-    "                \"reward\": str(trajectory.reward),\n",
-    "                \"reward_assigned\": \"true\",\n",
-    "            }\n",
-    "        )\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error updating log metadata: {e}\")\n",
-    "\n",
-    "    return trajectory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rollout' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 6\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mart\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbenchmark_rollout\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m benchmark_rollout\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mawait\u001b[39;00m benchmark_rollout(\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt-4o-mini\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;241m100\u001b[39m,\n\u001b[0;32m----> 6\u001b[0m     rollout,\n\u001b[1;32m      7\u001b[0m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'rollout' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from art.utils.benchmark_rollout import benchmark_rollout\n",
     "\n",
