--- a/examples/2048/benchmark_2048.ipynb
+++ b/examples/2048/benchmark_2048.ipynb
@@ -11,11 +11,17 @@
      "text": [
       "|    |   Model | Split   |   Iteration |   reward |   max_value |   board_value |\n",
       "|---:|--------:|:--------|------------:|---------:|------------:|--------------:|\n",
-      "|  0 |     007 | train   |        0001 |  2.00032 |          32 |            54 |\n",
-      "|  1 |     007 | train   |        0002 |  2.00038 |          32 |            64 |\n",
-      "|  2 |     007 | train   |        0006 |  2.00028 |          32 |            58 |\n",
-      "|  3 |     008 | train   |        0053 |  2.0007  |          32 |            53 |\n",
-      "|  4 |     009 | train   |        0379 |  1.48319 |          96 |           214 |\n"
+      "|  0 |     007 | train   |        0000 | 0.500402 |          32 |            58 |\n",
+      "|  1 |     007 | train   |        0001 | 2.00032  |          32 |            54 |\n",
+      "|  2 |     007 | train   |        0002 | 2.00038  |          32 |            64 |\n",
+      "|  3 |     007 | train   |        0003 | 0.500034 |          32 |            68 |\n",
+      "|  4 |     007 | train   |        0004 | 0.500139 |          32 |            54 |\n",
+      "|  5 |     007 | train   |        0005 | 0.500105 |          32 |            68 |\n",
+      "|  6 |     007 | train   |        0006 | 2.00028  |          32 |            58 |\n",
+      "|  7 |     008 | train   |        0053 | 2.0007   |          32 |            53 |\n",
+      "|  8 |     009 | train   |        0000 | 0.500467 |         128 |           202 |\n",
+      "|  9 |     009 | train   |        0377 | 1.48512  |          96 |           230 |\n",
+      "| 10 |     009 | train   |        0378 | 1.39258  |          80 |           180 |\n"
      ]
     }
    ],
@@ -26,11 +32,9 @@
     "table_str = generate_comparison_table(\n",
     "    project=\"2048-multi-turn\",\n",
     "    benchmark_keys=[\n",
-    "        BenchmarkedModelKey(\"007\", \"train\", 1),\n",
-    "        BenchmarkedModelKey(\"007\", \"train\", 2),\n",
     "        BenchmarkedModelKey(\"007\", \"train\"),\n",
-    "        BenchmarkedModelKey(\"008\", \"train\", 53),\n",
-    "        BenchmarkedModelKey(\"009\", \"train\")\n",
+    "        BenchmarkedModelKey(\"008\", \"train\", [53]),\n",
+    "        BenchmarkedModelKey(\"009\", \"train\", [0, -2, -1])\n",
     "    ],\n",
     "    metrics=[\"reward\", \"max_value\", \"board_value\"]\n",
     ")\n",
